[metadata]
name = c19
version = 0.0.1
author = siphr
author_email = pypi@techtum.dev
description = Covid19 stats package for various countries.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.techtum.dev/work-c19-220109.html
license = MIT
project_urls =
    Bug Tracker = https://github.com/siphr/c19/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = c19
python_requires = >=3.6
